--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get:
+  flutter_screenutil: 5.0.0-nullsafety.11
+  provider:
+  http:
+  cached_network_image: ^3.0.0
+  flutter_svg:
+  shared_preferences: ^2.0.5
+  flutter_rating_bar: ^4.0.0
+  flutter_card_swipper: ^0.4.0
+  fluttertoast: ^8.0.6
+  url_launcher: ^6.0.6
+  image_picker: ^0.8.0+1
+  intl: ^0.17.0
+  syncfusion_flutter_calendar: ^19.2.48
+  syncfusion_flutter_datepicker: ^19.2.49
+  sms_autofill: ^2.0.0
+  pin_code_fields: ^7.1.0
+  percent_indicator: ^3.0.1
+  share: ^2.0.4
+
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
